@@ -1,4 +1,13 @@
 2007-11-25 Jim Sack <jgsack@san.rr.com>
+	* src/const.py.in : add USER_xxx for more centralization
+	* src/ViewManager.py : use const.USER_DOCGEN
+	* src/ReportBase/_TemplateParser.py : use const.USER_TEMPLATES
+	* src/plugins/WebCal.py : use const.USER_PLUGINS
+	* src/plugins/Calendar.py : use const.USER_PLUGINS
+	* src/gramps_main.py : use const.USER_DIRLIST
+	const,py.in also includes TEMP_DIR (for upcoming change)
+
+2007-11-25 Jim Sack <jgsack@san.rr.com>
 	* src/ArgHandler.py : #1397 add except clause for GrampsDbException
 	applies to CLI (not) handling of grdb imports
 
